# udacity-agentic-ai-c4-project

./: .env.example  .gitignore  DESIGN_NOTES.md  README.md  implementation_diagram.mmd  main.py  project_starter.py  pyproject.toml  test_results.csv
.github/: CODEOWNERS
