[project]
name = "udacity-agentic-ai-c4-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai==1.76.0",
    "pandas==2.2.3",
    "python-dotenv==1.1.0",
    "smolagents>=1.25.0",
    "sqlalchemy==2.0.40",
    "typing==3.7.4.3",
]
